--- a/package.json
+++ b/package.json
@@ -2,7 +2,8 @@
   "name": "codemirror-wrapper",
   "main": "codemirror-wrapper.js",
   "dependencies": {
-    "@polymer/polymer": "^3.0.0"
+    "@polymer/polymer": "^3.0.0",
+    "codemirror": "^5.47.0"
   },
   "devDependencies": {
     "@polymer/iron-demo-helpers": "^3.0.0-pre.19",
