no recuerdo qué es esto

--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "main": "codemirror-wrapper.js",
   "dependencies": {
     "@polymer/polymer": "^3.0.0",
-    "codemirror": "^5.47.0"
+    "codemirror": "^5.47.0",
+    "lit-element": "^2.2.0"
   },
   "devDependencies": {
     "@polymer/iron-demo-helpers": "^3.0.0-pre.19",
